Exception class amplied to every class

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description":"psr",
     "autoload":{
         "psr-4":{
-            "http\\": "src/http"
+            "Http\\": "src/Http"
         }
     },
     "require": {
